--- a/googled7c6edc3a9953ead.html
+++ b/googled7c6edc3a9953ead.html
@@ -517,7 +517,7 @@ NexT.utils.loadComments(document.querySelector('#gitalk-container'), () => {
     var gitalk = new Gitalk({
       clientID    : 'ed5b919d43fc53fc74a6',
       clientSecret: 'b5c82ea4f7c5a4af630adea1e56a4a1a0ce7dea4',
-      repo        : 'https://github.com/xbwee1024/xbwee1024.github.io',
+      repo        : 'xbwee1024.github.io',
       owner       : 'xbwee1024',
       admin       : ['xbwee1024'],
       id          : 'fea2d5d3561f1a64f0959dc4aec69b01',
